# kaimiPi

./: .gitignore  .gitmodules  README.md  ps3joy.py
src/kaimi_2dnav/: CMakeLists.txt  package.xml
src/kaimi_2dnav/config/: costmap_common_params.yaml
src/kaimi_base_controller/: CMakeLists.txt  package.xml
src/kaimi_base_controller/include/: DiffDriveController.h
src/kaimi_base_controller/launch/: kaimi_base_controller.launch.xml
src/kaimi_base_controller/scripts/: setupWiring.sh  test.sh
src/kaimi_base_controller/src/: DiffDriveController.cpp  kaimi_base_controller_node.cpp
src/kaimi_imu/: CMakeLists.txt  package.xml
src/kaimi_imu/include/: MPU6050_6Axis_MotionApps20.h
src/kaimi_imu/launch/: kaimi_imu.launch.xml
src/kaimi_imu/src/: I2Cdev.cpp  MPU6050.cpp  kaimi_imu_node.cpp
src/kaimi_joystick/: CMakeLists.txt  package.xml
src/kaimi_joystick/include/: JoystickController.h
src/kaimi_joystick/launch/: kaimi_joystick.launch
src/kaimi_joystick/src/: JoystickController.cpp  kaimi_joystick_node.cpp
src/kaimi_mid_camera/: CMakeLists.txt
src/kaimi_mid_camera/include/: FindObject.h
src/kaimi_mid_camera/launch/: kaimi_mid_camera.launch  kaimi_mid_camera.launch.xml  kaimi_mid_camera_launch.xml
src/kaimi_mid_camera/src/: FindObject.cpp  kaimi_mid_camera_node.cpp
src/kaimi_mid_camera_publisher/: CMakeLists.txt  package.xml
src/kaimi_mid_camera_publisher/include/: FindObject.h
src/kaimi_mid_camera_publisher/launch/: kaimi_mid_camera_publisher.launch
src/kaimi_mid_camera_publisher/src/: FindObject.cpp  kaimi_mid_camera_publisher_node.cpp
src/kaimi_move_base/: CMakeLists.txt  package.xml
src/kaimi_strategy/: CMakeLists.txt  package.xml
src/kaimi_strategy/include/: FetchPrecachedSample.h  GoHome.h  IsHealthy.h  KaimiImu.h  KaimiMidField.h  KaimiNearField.h  KaimiStrategyFn.h  Motion.h  StrategyContext.h
src/kaimi_strategy/launch/: depth.launch.xml  depth_registered.launch.xml  device.launch  device.launch.xml  disparity.launch.xml  disparity_registered.launch.xml  foo.launch  fovis_hydro_openni.launch  freenect.launch.xml  gps.launch  ir.launch.xml  kaimi_strategy.launch  kaimi_strategy.launch.xml  kinect_frames.launch  manager.launch.xml  noStrategyOrMotor.launch.xml  processing.launch.xml  rgb.launch.xml
src/kaimi_strategy/map/: map1.pgm  map1.yaml
src/kaimi_strategy/src/: FetchPrecachedSample.cpp  GoHome.cpp  IsHealthy.cpp  KaimiImu.cpp  KaimiMidField.cpp  KaimiNearField.cpp  KaimiStrategyFn.cpp  Motion.cpp  StrategyContext.cpp  kaimi_strategy_node.cpp
src/kaimi_test/: CMakeLists.txt  package.xml
src/kaimi_test/launch/: kaimi.launch
src/kaimi_test/src/: kaimi_test_node.cpp
src/rosberrypi_cam/: CMakeLists.txt  CMakeLists.txt.ORIG
src/rosberrypi_cam/launch/: rosberrypi_cam.launch.xml
src/rosberrypi_cam/src/: main.cpp  main.cpp.ORIG
src/rplidar_ros/: CMakeLists.txt
src/rplidar_ros/.RemovedGit/: config  index  packed-refs
src/rplidar_ros/.RemovedGit/logs/: HEAD
src/rplidar_ros/.RemovedGit/objects/pack/: pack-e7f1f181d99cd955aaf2d3effaf468a7613fc008.idx  pack-e7f1f181d99cd955aaf2d3effaf468a7613fc008.pack
src/rplidar_ros/.RemovedGit/refs/heads/: master
src/rplidar_ros/launch/: rplidar.launch  rplidar.launch~
src/rplidar_ros/src/: node.cpp
src/test_goals/: CMakeLists.txt  package.xml
src/test_goals/src/: test_goals.cpp
